KAS-KDF-56C-OneStep-table-fixes
Fixed issue where values in Tables 2 and 4 were not displaying

--- a/src/kas/sp800-56c/onestep/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/onestep/sections/05-capabilities.adoc
@@ -9,15 +9,15 @@ A registration *SHALL* use these properties:
 |===
 | JSON Value| Description| JSON Type| Valid Values
 
-| algorithm| The algorithm under test| value| KAS-KDF
-| mode| The mode under test| value| OneStep
-| revision| The algorithm testing revision to use.| value| "Sp800-56Cr1"
-| prereqVals| Prerequisite algorithm validations| array of prereqAlgVal objects| See <<prereq_algs>>
-| auxFunctions| The auxiliary capabilities of the implementation.| array of <<auxfunc>>| See <<auxfunc>>
-| fixedInfoPattern| The pattern used for fixedInfo construction. | string| See <<fixedinfopatcon>>
-| encoding| The encoding type to use with fixedInfo construction.  Note concatenation is currently supported.  ASN.1 should be coming. | array of string| concatenation
-| z| The domain of values representing the min/max lengths of Z the implementation can support.| Domain
-| l| The largest DKM the implementation can produce (up to a max of 2048).| number
+| algorithm | The algorithm under test| value| KAS-KDF
+| mode | The mode under test| value| OneStep
+| revision | The algorithm testing revision to use.| value| "Sp800-56Cr1"
+| prereqVals | Prerequisite algorithm validations| array of prereqAlgVal objects| See <<prereq_algs>>
+| auxFunctions | The auxiliary capabilities of the implementation.| array of <<auxfunc>>| See <<auxfunc>>
+| fixedInfoPattern | The pattern used for fixedInfo construction. | string| See <<fixedinfopatcon>>
+| encoding | The encoding type to use with fixedInfo construction.  Note concatenation is currently supported.  ASN.1 should be coming. | array of string| concatenation
+| z | The domain of values representing the min/max lengths of Z the implementation can support. | Domain | 
+| l | The length (in bits) of the largest derived keying material the implementation can produce (up to a max of 2048). | number | 
 |===
 
 [[prereq_algs]]
@@ -41,7 +41,7 @@ Some algorithm implementations rely on other cryptographic primitives. For examp
 |===
 | JSON Value| Description| JSON Type| Valid Values
 
-| auxFunctionName| The auxiliary function to use.| string| SHA-1, SHA2-224, SHA2-256, SHA2-384, SHA2-512, SHA2-512/224, SHA2-512/256, SHA3-224, SHA3-256, SHA3-384, SHA3-512, HMAC-SHA-1, HMAC-SHA2-224, HMAC-SHA2-256, HMAC-SHA2-384, HMAC-SHA2-512, HMAC-SHA2-512/224, HMAC-SHA2-512/256, HMAC-SHA3-224, HMAC-SHA3-256, HMAC-SHA3-384, HMAC-SHA3-512, KMAC-128, KMAC-256 | No
+| auxFunctionName| The auxiliary function to use.| string| SHA-1, SHA2-224, SHA2-256, SHA2-384, SHA2-512, SHA2-512/224, SHA2-512/256, SHA3-224, SHA3-256, SHA3-384, SHA3-512, HMAC-SHA-1, HMAC-SHA2-224, HMAC-SHA2-256, HMAC-SHA2-384, HMAC-SHA2-512, HMAC-SHA2-512/224, HMAC-SHA2-512/256, HMAC-SHA3-224, HMAC-SHA3-256, HMAC-SHA3-384, HMAC-SHA3-512, KMAC-128, KMAC-256 
 | macSaltMethods| How the salt is determined (default being all 00s, random being a random salt). Required for MAC based auxFunctions.| array of string| default, random
 |===
 
