--- a/src/kas/sp800-56c/twostep/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/twostep/sections/05-capabilities.adoc
@@ -14,9 +14,9 @@ A registration *SHALL* use these properties:
 | revision| The algorithm testing revision to use.| value| "Sp800-56Cr1"
 | prereqVals| Prerequisite algorithm validations| array of prereqAlgVal objects| See <<prereq_algs>>
 | capabilities | The two step configuration objects | array of <<twostepkdf>> | See <<twostepkdf>>
-| z| The domain of values representing the min/max lengths of Z the implementation can support.| Domain
-| l| The largest DKM the implementation can produce (up to a max of 2048).| number
-| performMultiExpansionTests | Should multi expansion runs of the KDF be tested (in addition to the single expansion tests)? Only applicable for <<SP800-56Cr2>> | boolean
+| z | The domain of values representing the min/max lengths of Z the implementation can support. | Domain | 
+| l | The length (in bits) of the largest derived keying material the implementation can produce (up to a max of 2048). | number | 
+| performMultiExpansionTests | Should multi expansion runs of the KDF be tested (in addition to the single expansion tests)? Only applicable for <<SP800-56Cr2>> | boolean | true, false
 |===
 
 [[prereq_algs]]
