KAS-KDF-56C-HKDF-table-fix
Fixed issue where values in Table 2 were not displaying properly

--- a/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56c/hkdf/sections/05-capabilities.adoc
@@ -17,9 +17,9 @@ A registration *SHALL* use these properties:
 | encoding | The encoding type to use with fixedInfo construction.  Note concatenation is currently supported.  ASN.1 should be coming. | array of string | concatenation 
 | hmacAlg | The HMAC modes supported by the KDF. | array of string | See <<hmacAlg>>
 | macSaltMethods | How the salt is determined (default being all 00s, random being a random salt). | array of string | default, random
-| z | The domain of values representing the min/max lengths of Z the implementation can support. | Domain
-| l | The largest DKM the implementation can produce (up to a max of 2048). | number
-| performMultiExpansionTests | Should multi expansion runs of the KDF be tested (in addition to the single expansion tests)? Only applicable for <<SP800-56Cr2>> | boolean
+| z | The domain of values representing the min/max lengths of Z the implementation can support. | Domain | 
+| l | The length (in bits) of the largest derived keying material the implementation can produce (up to a max of 2048). | number | 
+| performMultiExpansionTests | Should multi expansion runs of the KDF be tested (in addition to the single expansion tests)? Only applicable for <<SP800-56Cr2>> | boolean | true, false 
 |===
 
 [[prereq_algs]]
