correct XTS rev 2.0 parameter descriptions
-correct AES XTS rev 2.0 parameter descriptions in acvp symmetric spec
-closes #1204

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -125,10 +125,10 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 |===
 | algorithm| revision| direction| keyLen| payloadLen| tweakMode| dataUnitLen| dataUnitLenMatchesPayload
 | ACVP-AES-XTS| "1.0"| ["encrypt", "decrypt"]| [128, 256]| {"Min": 128, "Max": 65536, "Inc": 128}| ["hex", "number"]| |
-| ACVP-AES-XTS| "2.0"| ["encrypt", "decrypt"]| [128, 256]| {"Min": 128, "Max": 65536, "Inc": 8}| ["hex", "number"]| {"Min": 128, "Max": 65536, "Inc": 8}| true, false (if this value is false, the dataUnitLen *SHALL* not be present)
+| ACVP-AES-XTS| "2.0"| ["encrypt", "decrypt"]| [128, 256]| {"Min": 128, "Max": 65536, "Inc": 8}| ["hex", "number"]| {"Min": 128, "Max": 65536, "Inc": 8}| true, false (if this value is true, the dataUnitLen parameter *SHALL* not be present; if this value is false, the dataUnitLen parameter *SHALL* be present)
 |===
 
-NOTE: The difference in testing between ACVP-AES-XTS / "1.0" and ACVP-AES-XTS / "2.0" is the inclusion of the data unit in the "2.0" revision. The <<AES-XTS>> standard provides the concept of a data unit as a means of logically breaking apart a data stream provided to the encryption algorithm. A data unit may be larger, smaller or equal to the payload being processed. In the case of the "1.0" revision, the data unit length always matches the payload length. Thus, the "1.0" revision can be accessed via the "2.0" revision by setting the 'dataUnitLenMatchesPayload' field to false. Within the prompt, in "1.0", the test group contains the payload length for the entire group. In "2.0" this is moved to the test case level and handled on a per case basis along with the data unit length. Both values may be provided even when 'dataUnitLenMatchesPayload' is false.
+NOTE: The difference in testing between ACVP-AES-XTS / "1.0" and ACVP-AES-XTS / "2.0" is the inclusion of the data unit in the "2.0" revision. The <<AES-XTS>> standard provides the concept of a data unit as a means of logically breaking apart a data stream provided to the encryption algorithm. A data unit may be larger, smaller or equal to the payload being processed. In the case of the "1.0" revision, the data unit length always matches the payload length. Thus, the "1.0" revision can be accessed via the "2.0" revision by setting the 'dataUnitLenMatchesPayload' field to true. Within the prompt, in "1.0", the test group contains the payload length for the entire group. In "2.0" this is moved to the test case level and handled on a per case basis along with the data unit length. Both values may be provided even when 'dataUnitLenMatchesPayload' is true.
 
 The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each miscellaneous block cipher algorithm:
 
