--- a/src/kas/sp800-56br2/sections/06-test-vectors.adoc
+++ b/src/kas/sp800-56br2/sections/06-test-vectors.adoc
@@ -35,7 +35,7 @@ Describes the KDF configuration for use under the test group.
 |===
 | JSON Value| Description| JSON Type| Optional
 
-| kdfType| The type of KDF to use for the group. | value - onestep, twostep| No
+| kdfType| The type of KDF to use for the group. | value - oneStep, oneStepNoCounter, twoStep| No
 | saltMethod|  The strategy used for salting. | value - default (all 00s), random| No
 | fixedInfoPattern| The pattern used for constructing the fixedInfo. | value - See <<fixedinfopatcon>>.| No
 | fixedInfoEncoding| The encoding type used when constructing the fixedInfo. | value - See <<fixedinfopatcon>>.| No
