--- a/src/kas/sp800-56c/onestep/sections/98-references.adoc
+++ b/src/kas/sp800-56c/onestep/sections/98-references.adoc
@@ -7,6 +7,7 @@
 
 * [[[SP800-108,NIST SP 800-108]]]
 * [[[SP800-56Ar3,NIST SP 800-56A Rev. 3]]]
+* [[[SP800-56Br2,NIST SP 800-56B Rev. 2]]]
 * [[[SP800-56Cr1,NIST SP 800-56C Rev. 1]]]
 * [[[SP800-56Cr2,NIST SP 800-56C Rev. 2]]]
 
