Update KAS-ECC-56Ar3 ECDSA Prerequisites

--- a/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
@@ -25,7 +25,7 @@ KAS has conditional prerequisite algorithms, depending on the capabilities regis
 
 | DRBG | Always *REQUIRED*
 | SHA | Always *REQUIRED*
-| ECDSA | ECDSA KeyGen/KeyVer validation *REQUIRED* when IUT makes use of the generation/validation of keys within the module boundary.
+| ECDSA | If the implementation supports fullVal (see <<supported_functions>>), then ECDSA keyVer validation is *REQUIRED*. If the implementation supports keyPairGen (see <<supported_functions>>), then ECDSA keyGen and ECDSA keyVer validation are *REQUIRED*.
 | CMAC | CMAC validation *REQUIRED* when IUT is performing KeyConfirmation (KC) or a KDF and utilizing CMAC.
 | HMAC | HMAC validation *REQUIRED* when IUT is performing KeyConfirmation (KC) or a KDF and utilizing HMAC.
 | KMAC | KMAC validation *REQUIRED* when IUT is performing KeyConfirmation (KC) or a KDF and utilizing KMAC.
