Adding inherited info from SP800-108 to Capabilities.

--- a/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
@@ -162,7 +162,11 @@ The one step no counter KDF is a special implementation of the one step KDF.  Th
 | capabilities| The capabilities supported for the Two Step KDF.| array of <<twostepcapcap>>| See <<twostepcapcap>>| No
 |===
 
-Note this capabilities object is very similar to the capability object from SP800-108.
+Note this capabilities object is very similar to the capability object from SP800-108.  Specific restrictions inherited from  SP800-108 include the following.
+
+* The 'fixedDataOrder' options "none" and "before iterator" are not valid for "counter" KDF.  The 'fixedDataOrder' option "middle fixed data" is not valid for "feedback" nor "double pipeline iterator" KDF.
+* A 'counterLength'of 0 describes that there is no counter used.  The 0 option is not valid  for "counter" KDF.
+* When'counterLength' contains a value of "0", 'fixedDataOrder'must contain a value of "none" and vice versus.
 
 [[twostepcapcap]]
 .TwoStepCapabilities Options
