Adding Wrap/Unwrap Operations table for additional clarity.

--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -103,6 +103,20 @@ The following grid outlines which properties are *REQUIRED*, as well as the poss
 | TDES-KW | "1.0" | ["encrypt", "decrypt"] | | ["cipher", "inverse"] | [1, 2] Note: 2 is only available for decrypt operations | {"Min": 64, "Max": 4096, "Increment": 32} 
 |===
 
+The underlying operations associated with different KW and KWP parameter selections are summarized in the following grid.
+ 
+[[wrap_unwrap_ops]]
+.Wrapping and Unwrapping Operations
+
+|===
+| Operation | Cipher | Underlying AES Operation
+
+| Wrap (direction encrypt)  | Cipher | AES Encrypt
+| Wrap (direction encrypt)  | Inverse | AES Decrypt 
+| Unwrap (direction decrypt) | Cipher | AES Decrypt
+| Unwrap (direction decrypt) | Inverse | AES Encrypt 
+|===
+
 The following grid outlines which properties are *REQUIRED*, as well as the possible values a server *MAY* support for each authenticated block cipher algorithm:
 
 [cols="<,<,<,<,<,<,<,<,<,<,<"]
