Correcting FFC references and scheme names in ECC spec

--- a/src/kas/sp800-56ar3/ecc/sections/03-supported.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/03-supported.adoc
@@ -1,7 +1,8 @@
 
 [#supported]
-== Supported KAS-FFCs
+== Supported KAS-ECCs
 
 The following key derivation functions *MAY* be advertised by the ACVP compliant cryptographic module:
 
-* KAS-FFC / null / Sp800-56Ar3
+* KAS-ECC / null / Sp800-56Ar3
+* KAS-ECC / CDH-Component / Sp800-56Ar3
