--- a/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
+++ b/src/kas/sp800-56ar3/ecc/sections/05-capabilities.adoc
@@ -468,75 +468,75 @@ The various schemes of KAS all have their own requirements as to keys and nonces
 |===
 | Scheme| KasMode| KasRole| KeyConfirmationRole| KeyConfirmationDirection| StaticKeyPair| EphemeralKeyPair| EphemeralNonce| DkmNonce
 
-| DhHybrid1| NoKdfNoKc| InitiatorPartyU| None| None| True| True| False| False
-| DhHybrid1| NoKdfNoKc| ResponderPartyV| None| None| True| True| False| False
-| DhHybrid1| KdfNoKc| InitiatorPartyU| None| None| True| True| False| False
-| DhHybrid1| KdfNoKc| ResponderPartyV| None| None| True| True| False| False
-| DhHybrid1| KdfKc| InitiatorPartyU| Provider| Unilateral| True| True| False| False
-| DhHybrid1| KdfKc| InitiatorPartyU| Provider| Bilateral| True| True| False| False
-| DhHybrid1| KdfKc| InitiatorPartyU| Recipient| Unilateral| True| True| False| False
-| DhHybrid1| KdfKc| InitiatorPartyU| Recipient| Bilateral| True| True| False| False
-| DhHybrid1| KdfKc| ResponderPartyV| Provider| Unilateral| True| True| False| False
-| DhHybrid1| KdfKc| ResponderPartyV| Provider| Bilateral| True| True| False| False
-| DhHybrid1| KdfKc| ResponderPartyV| Recipient| Unilateral| True| True| False| False
-| DhHybrid1| KdfKc| ResponderPartyV| Recipient| Bilateral| True| True| False| False
-| Mqv2| NoKdfNoKc| InitiatorPartyU| None| None| True| True| False| False
-| Mqv2| NoKdfNoKc| ResponderPartyV| None| None| True| True| False| False
-| Mqv2| KdfNoKc| InitiatorPartyU| None| None| True| True| False| False
-| Mqv2| KdfNoKc| ResponderPartyV| None| None| True| True| False| False
-| Mqv2| KdfKc| InitiatorPartyU| Provider| Unilateral| True| True| False| False
-| Mqv2| KdfKc| InitiatorPartyU| Provider| Bilateral| True| True| False| False
-| Mqv2| KdfKc| InitiatorPartyU| Recipient| Unilateral| True| True| False| False
-| Mqv2| KdfKc| InitiatorPartyU| Recipient| Bilateral| True| True| False| False
-| Mqv2| KdfKc| ResponderPartyV| Provider| Unilateral| True| True| False| False
-| Mqv2| KdfKc| ResponderPartyV| Provider| Bilateral| True| True| False| False
-| Mqv2| KdfKc| ResponderPartyV| Recipient| Unilateral| True| True| False| False
-| Mqv2| KdfKc| ResponderPartyV| Recipient| Bilateral| True| True| False| False
-| DhEphem| NoKdfNoKc| InitiatorPartyU| None| None| False| True| False| False
-| DhEphem| NoKdfNoKc| ResponderPartyV| None| None| False| True| False| False
-| DhEphem| KdfNoKc| InitiatorPartyU| None| None| False| True| False| False
-| DhEphem| KdfNoKc| ResponderPartyV| None| None| False| True| False| False
-| DhHybridOneFlow| NoKdfNoKc| InitiatorPartyU| None| None| True| True| False| False
-| DhHybridOneFlow| NoKdfNoKc| ResponderPartyV| None| None| True| False| False| False
-| DhHybridOneFlow| KdfNoKc| InitiatorPartyU| None| None| True| True| False| False
-| DhHybridOneFlow| KdfNoKc| ResponderPartyV| None| None| True| False| False| False
-| DhHybridOneFlow| KdfKc| InitiatorPartyU| Provider| Unilateral| True| True| False| False
-| DhHybridOneFlow| KdfKc| InitiatorPartyU| Provider| Bilateral| True| True| False| False
-| DhHybridOneFlow| KdfKc| InitiatorPartyU| Recipient| Unilateral| True| True| False| False
-| DhHybridOneFlow| KdfKc| InitiatorPartyU| Recipient| Bilateral| True| True| False| False
-| DhHybridOneFlow| KdfKc| ResponderPartyV| Provider| Unilateral| True| False| False| False
-| DhHybridOneFlow| KdfKc| ResponderPartyV| Provider| Bilateral| True| False| True| False
-| DhHybridOneFlow| KdfKc| ResponderPartyV| Recipient| Unilateral| True| False| True| False
-| DhHybridOneFlow| KdfKc| ResponderPartyV| Recipient| Bilateral| True| False| True| False
-| Mqv1| NoKdfNoKc| InitiatorPartyU| None| None| True| True| False| False
-| Mqv1| NoKdfNoKc| ResponderPartyV| None| None| True| False| False| False
-| Mqv1| KdfNoKc| InitiatorPartyU| None| None| True| True| False| False
-| Mqv1| KdfNoKc| ResponderPartyV| None| None| True| False| False| False
-| Mqv1| KdfKc| InitiatorPartyU| Provider| Unilateral| True| True| False| False
-| Mqv1| KdfKc| InitiatorPartyU| Provider| Bilateral| True| True| False| False
-| Mqv1| KdfKc| InitiatorPartyU| Recipient| Unilateral| True| True| False| False
-| Mqv1| KdfKc| InitiatorPartyU| Recipient| Bilateral| True| True| False| False
-| Mqv1| KdfKc| ResponderPartyV| Provider| Unilateral| True| False| False| False
-| Mqv1| KdfKc| ResponderPartyV| Provider| Bilateral| True| False| True| False
-| Mqv1| KdfKc| ResponderPartyV| Recipient| Unilateral| True| False| True| False
-| Mqv1| KdfKc| ResponderPartyV| Recipient| Bilateral| True| False| True| False
-| DhOneFlow| NoKdfNoKc| InitiatorPartyU| None| None| False| True| False| False
-| DhOneFlow| NoKdfNoKc| ResponderPartyV| None| None| True| False| False| False
-| DhOneFlow| KdfNoKc| InitiatorPartyU| None| None| False| True| False| False
-| DhOneFlow| KdfNoKc| ResponderPartyV| None| None| True| False| False| False
-| DhOneFlow| KdfKc| InitiatorPartyU| Recipient| Unilateral| False| True| False| False
-| DhOneFlow| KdfKc| ResponderPartyV| Provider| Unilateral| True| False| False| False
-| DhStatic| NoKdfNoKc| InitiatorPartyU| None| None| True| False| False| False
-| DhStatic| NoKdfNoKc| ResponderPartyV| None| None| True| False| False| False
-| DhStatic| KdfNoKc| InitiatorPartyU| None| None| True| False| False| True
-| DhStatic| KdfNoKc| ResponderPartyV| None| None| True| False| False| False
-| DhStatic| KdfKc| InitiatorPartyU| Provider| Unilateral| True| False| False| True
-| DhStatic| KdfKc| InitiatorPartyU| Provider| Bilateral| True| False| False| True
-| DhStatic| KdfKc| InitiatorPartyU| Recipient| Unilateral| True| False| False| True
-| DhStatic| KdfKc| InitiatorPartyU| Recipient| Bilateral| True| False| False| True
-| DhStatic| KdfKc| ResponderPartyV| Provider| Unilateral| True| False| False| False
-| DhStatic| KdfKc| ResponderPartyV| Provider| Bilateral| True| False| True| False
-| DhStatic| KdfKc| ResponderPartyV| Recipient| Unilateral| True| False| True| False
-| DhStatic| KdfKc| ResponderPartyV| Recipient| Bilateral| True| False| True| False
+| fullUnified| NoKdfNoKc| InitiatorPartyU| None| None| True| True| False| False
+| fullUnified| NoKdfNoKc| ResponderPartyV| None| None| True| True| False| False
+| fullUnified| KdfNoKc| InitiatorPartyU| None| None| True| True| False| False
+| fullUnified| KdfNoKc| ResponderPartyV| None| None| True| True| False| False
+| fullUnified| KdfKc| InitiatorPartyU| Provider| Unilateral| True| True| False| False
+| fullUnified| KdfKc| InitiatorPartyU| Provider| Bilateral| True| True| False| False
+| fullUnified| KdfKc| InitiatorPartyU| Recipient| Unilateral| True| True| False| False
+| fullUnified| KdfKc| InitiatorPartyU| Recipient| Bilateral| True| True| False| False
+| fullUnified| KdfKc| ResponderPartyV| Provider| Unilateral| True| True| False| False
+| fullUnified| KdfKc| ResponderPartyV| Provider| Bilateral| True| True| False| False
+| fullUnified| KdfKc| ResponderPartyV| Recipient| Unilateral| True| True| False| False
+| fullUnified| KdfKc| ResponderPartyV| Recipient| Bilateral| True| True| False| False
+| fullMqv| NoKdfNoKc| InitiatorPartyU| None| None| True| True| False| False
+| fullMqv| NoKdfNoKc| ResponderPartyV| None| None| True| True| False| False
+| fullMqv| KdfNoKc| InitiatorPartyU| None| None| True| True| False| False
+| fullMqv| KdfNoKc| ResponderPartyV| None| None| True| True| False| False
+| fullMqv| KdfKc| InitiatorPartyU| Provider| Unilateral| True| True| False| False
+| fullMqv| KdfKc| InitiatorPartyU| Provider| Bilateral| True| True| False| False
+| fullMqv| KdfKc| InitiatorPartyU| Recipient| Unilateral| True| True| False| False
+| fullMqv| KdfKc| InitiatorPartyU| Recipient| Bilateral| True| True| False| False
+| fullMqv| KdfKc| ResponderPartyV| Provider| Unilateral| True| True| False| False
+| fullMqv| KdfKc| ResponderPartyV| Provider| Bilateral| True| True| False| False
+| fullMqv| KdfKc| ResponderPartyV| Recipient| Unilateral| True| True| False| False
+| fullMqv| KdfKc| ResponderPartyV| Recipient| Bilateral| True| True| False| False
+| ephemeralUnified| NoKdfNoKc| InitiatorPartyU| None| None| False| True| False| False
+| ephemeralUnified| NoKdfNoKc| ResponderPartyV| None| None| False| True| False| False
+| ephemeralUnified| KdfNoKc| InitiatorPartyU| None| None| False| True| False| False
+| ephemeralUnified| KdfNoKc| ResponderPartyV| None| None| False| True| False| False
+| onePassUnified| NoKdfNoKc| InitiatorPartyU| None| None| True| True| False| False
+| onePassUnified| NoKdfNoKc| ResponderPartyV| None| None| True| False| False| False
+| onePassUnified| KdfNoKc| InitiatorPartyU| None| None| True| True| False| False
+| onePassUnified| KdfNoKc| ResponderPartyV| None| None| True| False| False| False
+| onePassUnified| KdfKc| InitiatorPartyU| Provider| Unilateral| True| True| False| False
+| onePassUnified| KdfKc| InitiatorPartyU| Provider| Bilateral| True| True| False| False
+| onePassUnified| KdfKc| InitiatorPartyU| Recipient| Unilateral| True| True| False| False
+| onePassUnified| KdfKc| InitiatorPartyU| Recipient| Bilateral| True| True| False| False
+| onePassUnified| KdfKc| ResponderPartyV| Provider| Unilateral| True| False| False| False
+| onePassUnified| KdfKc| ResponderPartyV| Provider| Bilateral| True| False| True| False
+| onePassUnified| KdfKc| ResponderPartyV| Recipient| Unilateral| True| False| True| False
+| onePassUnified| KdfKc| ResponderPartyV| Recipient| Bilateral| True| False| True| False
+| onePassMqv| NoKdfNoKc| InitiatorPartyU| None| None| True| True| False| False
+| onePassMqv| NoKdfNoKc| ResponderPartyV| None| None| True| False| False| False
+| onePassMqv| KdfNoKc| InitiatorPartyU| None| None| True| True| False| False
+| onePassMqv| KdfNoKc| ResponderPartyV| None| None| True| False| False| False
+| onePassMqv| KdfKc| InitiatorPartyU| Provider| Unilateral| True| True| False| False
+| onePassMqv| KdfKc| InitiatorPartyU| Provider| Bilateral| True| True| False| False
+| onePassMqv| KdfKc| InitiatorPartyU| Recipient| Unilateral| True| True| False| False
+| onePassMqv| KdfKc| InitiatorPartyU| Recipient| Bilateral| True| True| False| False
+| onePassMqv| KdfKc| ResponderPartyV| Provider| Unilateral| True| False| False| False
+| onePassMqv| KdfKc| ResponderPartyV| Provider| Bilateral| True| False| True| False
+| onePassMqv| KdfKc| ResponderPartyV| Recipient| Unilateral| True| False| True| False
+| onePassMqv| KdfKc| ResponderPartyV| Recipient| Bilateral| True| False| True| False
+| onePassDh| NoKdfNoKc| InitiatorPartyU| None| None| False| True| False| False
+| onePassDh| NoKdfNoKc| ResponderPartyV| None| None| True| False| False| False
+| onePassDh| KdfNoKc| InitiatorPartyU| None| None| False| True| False| False
+| onePassDh| KdfNoKc| ResponderPartyV| None| None| True| False| False| False
+| onePassDh| KdfKc| InitiatorPartyU| Recipient| Unilateral| False| True| False| False
+| onePassDh| KdfKc| ResponderPartyV| Provider| Unilateral| True| False| False| False
+| staticUnified| NoKdfNoKc| InitiatorPartyU| None| None| True| False| False| False
+| staticUnified| NoKdfNoKc| ResponderPartyV| None| None| True| False| False| False
+| staticUnified| KdfNoKc| InitiatorPartyU| None| None| True| False| False| True
+| staticUnified| KdfNoKc| ResponderPartyV| None| None| True| False| False| False
+| staticUnified| KdfKc| InitiatorPartyU| Provider| Unilateral| True| False| False| True
+| staticUnified| KdfKc| InitiatorPartyU| Provider| Bilateral| True| False| False| True
+| staticUnified| KdfKc| InitiatorPartyU| Recipient| Unilateral| True| False| False| True
+| staticUnified| KdfKc| InitiatorPartyU| Recipient| Bilateral| True| False| False| True
+| staticUnified| KdfKc| ResponderPartyV| Provider| Unilateral| True| False| False| False
+| staticUnified| KdfKc| ResponderPartyV| Provider| Bilateral| True| False| True| False
+| staticUnified| KdfKc| ResponderPartyV| Recipient| Unilateral| True| False| True| False
+| staticUnified| KdfKc| ResponderPartyV| Recipient| Bilateral| True| False| True| False
 |===
 
