XOF Spec ParallelHash updates.  Resolves ACVP-Sever #92.

--- a/src/xof/sections/05-capabilities.adoc
+++ b/src/xof/sections/05-capabilities.adoc
@@ -24,22 +24,23 @@ Each algorithm capability advertised is a self-contained JSON object.  The follo
 | outputLen | Output length for the XOF | domain
 | keyLen | Supported key lengths | domain
 | macLen | Supported MAC lengths | domain
+| blockSize | blockSize (in bits) to be used with ParallelHash | domain
 |===
 
 The following grid outlines which properties are *REQUIRED*, as well as all the possible values a server *MAY* support for XOF algorithms:
 
-[cols="<,<,<,<,<,<,<"]
+[cols="<,<,<,<,<,<,<,<"]
 [[property_grid]]
 .XOF Capabilities Applicability Grid
 |===
-| algorithm | xof | hexCustomization | msgLen | outputLen | keyLen | macLen
+| algorithm | xof | hexCustomization | msgLen | outputLen | keyLen | macLen | blockSize
 
-| cSHAKE-128 | | | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | |
-| cSHAKE-256 | | | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | |
-| KMAC-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 0, Max: 65536} | {Min: 128, Max: 524288, Inc: 8} | {Min: 32, Max: 65536, Inc: 8}
-| KMAC-256 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 0, Max: 65536} | {Min: 128, Max: 524288, Inc: 8} | {Min: 32, Max: 65536, Inc: 8}
-| ParallelHash-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | |
-| ParallelHash-256 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | |
-| TupleHash-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | |
-| TupleHash-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | |
+| cSHAKE-128 | | | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | |
+| cSHAKE-256 | | | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | |
+| KMAC-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 0, Max: 65536} | {Min: 128, Max: 524288, Inc: 8} | {Min: 32, Max: 65536, Inc: 8} |
+| KMAC-256 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 0, Max: 65536} | {Min: 128, Max: 524288, Inc: 8} | {Min: 32, Max: 65536, Inc: 8} |
+| ParallelHash-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | | {Min: 1, Max: 128, Inc: 1}
+| ParallelHash-256 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | | {Min: 1, Max: 128, Inc: 1}
+| TupleHash-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | |
+| TupleHash-128 | [true, false] | true, false | {Min: 0, Max: 65536} | {Min: 16, Max: 65536} | | |
 |===
