--- a/src/xof/sections/97-examples.adoc
+++ b/src/xof/sections/97-examples.adoc
@@ -74,6 +74,13 @@ The following is an example JSON object advertising support for ParallelHash-128
   "revision": "1.0",
   "xof": [true, false],
   "hexCustomization": false,
+  "blockSize": [
+    {
+      "min": 1,
+      "max": 16,
+      "increment": 1
+    }
+  ],
   "outputLen": [
     {
       "min": 256,
