--- a/src/symmetric/sections/04-testtypes.adoc
+++ b/src/symmetric/sections/04-testtypes.adoc
@@ -10,7 +10,7 @@ There are three types of tests for block ciphers: functional tests, Monte Carlo 
 
 * "AFT" - Algorithm Functional Test. These tests can be processed by the client using a normal 'encrypt' or 'decrypt' operation. AFTs cause the implementation under test to exercise normal operations on a single block, multiple blocks, or (where applicable) partial blocks. In some cases random data is used, in others, static, predetermined tests are provided. The functional tests of the block cipher are designed to verify that the logical components of the cipher (GFSbox, KeySbox, block chaining etc.) are operating correctly.
 
-* "MCT" - Monte Carlo Test. These tests exercise the implementation under test under strenuous circumstances. The implementation under test must process the test vectors according to the correct algorithm and mode in this document. MCTs can help detect potential memory leaks over time, and problems in allocation of resources, addressing variables, error handling and generally improper behavior in response to random inputs. Each MCT processes 100 pseudorandom tests. Not every algorithm and mode combination has an MCT.
+* "MCT" - Monte Carlo Test. These tests exercise the implementation under test under strenuous circumstances. The implementation under test must process the test vectors according to the correct algorithm and mode in this document. MCTs can help detect potential memory leaks over time, and problems in allocation of resources, addressing variables, error handling and generally improper behavior in response to random inputs. Not every algorithm and mode combination has an MCT.
 See <<MC_test>> for implementation details.
 
 * "CTR" - Counter Mode Test. Counter tests are specifically for counter modes (AES-CTR and TDES-CTR) and require an implementation under test to exercise their counter mechanism. The server will send a long message to the client for encryption or decryption and back-compute the IVs used by the implementation under test. These IVs are then verified for uniqueness and an increasing (or decreasing) nature. The client processes these tests as normal AFTs. The different mode is highlighted here to signify the difference on the server side for processing.
@@ -266,7 +266,7 @@ For i = 0 to 399
         Key3[i+1] = Key3[i] xor CT[j-2]
     Else
         Key3[i+1] = Key1[i+1]
-    PT[0] = CT[j-1]
+    PT[0] = CT[j]
 ----
 
 [[TDES-CBC-MCT]]
@@ -439,7 +439,7 @@ For i = 0 to 399
 ----
 
 [[TDES-OFB-MCT]]
-==== TDES Monte Carlo Test - OFB mode
+===== TDES Monte Carlo Test - OFB mode
 
 The initial condition for the test is the tuple (KEY1, KEY2, KEY3, IV, PT) set to some values.
 
