symmetric MCT fixes for ACVP-1192
-added decrypt pseudo code for each MCT test
-added instructions to README.md for compiling files with metanorma that are referenced by other files
-fixes ACVP #1192

--- a/src/symmetric/sections/04-testtypes.adoc
+++ b/src/symmetric/sections/04-testtypes.adoc
@@ -20,10 +20,11 @@ See <<MC_test>> for implementation details.
 
 The MCTs start with an initial condition (plaintext/ciphertext, key, and optional, or maybe multiple IVs) and perform a series of chained computations. For modes that use an IV, the IV is used in the beginning of each pseudorandom process. The IV is implicitly advanced according to the block cipher mode in use. There are separate rounds of MCT for encryption and decryption. Because some block cipher modes rely on an IV and perform calculations differently from other modes, there are specific definitions of MCT for many of the block cipher modes.
 
-NOTE: For all the following, the pseudocode for decryption can be obtained by replacing all PT's with CT's and all CT's with PT's. As well, replace the encrypt operation with the corresponding decrypt operation.
-
 [[AES-ECB-MCT]]
 ===== AES Monte Carlo Test - ECB mode
+
+[[AES-ECB-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY, PT) set to some values.
 
@@ -46,8 +47,16 @@ For i = 0 to 99
     PT[0] = CT[j]
 ----
 
+[[AES-ECB-MCT-DEC]]
+====== Decrypt
+
+The pseudocode for decryption can be obtained by replacing all PT's in the encryption pseudocode with CT's and all CT's in the encryption pseudocode with PT's. As well, replace the encrypt operation with the corresponding decrypt operation.
+
 [[AES-CBC-MCT]]
 ===== AES Monte Carlo Test - CBC mode
+
+[[AES-CBC-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY, IV, PT) set to some values.
 
@@ -77,8 +86,16 @@ For i = 0 to 99
     PT[0] = CT[j-1]
 ----
 
+[[AES-CBC-MCT-DEC]]
+====== Decrypt
+
+The pseudocode for decryption can be obtained by replacing all PT's in the encryption pseudocode with CT's and all CT's in the encryption pseudocode with PT's. As well, replace the encrypt operation with the corresponding decrypt operation.
+
 [[AES-OFB-MCT]]
 ===== AES Monte Carlo Test - OFB mode
+
+[[AES-OFB-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY, IV, PT) set to some values.
 
@@ -108,8 +125,16 @@ For i = 0 to 99
     PT[0] = CT[j-1]
 ----
 
+[[AES-OFB-MCT-DEC]]
+====== Decrypt
+
+The pseudocode for decryption can be obtained by replacing all PT's in the encryption pseudocode with CT's and all CT's in the encryption pseudocode with PT's. As well, replace the encrypt operation with the corresponding decrypt operation.
+
 [[AES-CFB1-MCT]]
 ===== AES Monte Carlo Test - CFB1 mode
+
+[[AES-CFB1-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY, IV, PT) set to some values.
 
@@ -147,8 +172,16 @@ For i = 0 to 99
     PT[0] = CT[j-128]
 ----
 
+[[AES-CFB1-MCT-DEC]]
+====== Decrypt
+
+The pseudocode for decryption can be obtained by replacing all PT's in the encryption pseudocode with CT's and all CT's in the encryption pseudocode with PT's. As well, replace the encrypt operation with the corresponding decrypt operation.
+
 [[AES-CFB8-MCT]]
 ===== AES Monte Carlo Test - CFB8 mode
+
+[[AES-CFB8-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY, IV, PT) set to some values.
 
@@ -186,8 +219,16 @@ For i = 0 to 99
     PT[0] = CT[j-16]
 ----
 
+[[AES-CFB8-MCT-DEC]]
+====== Decrypt
+
+The pseudocode for decryption can be obtained by replacing all PT's in the encryption pseudocode with CT's and all CT's in the encryption pseudocode with PT's. As well, replace the encrypt operation with the corresponding decrypt operation.
+
 [[AES-CFB128-MCT]]
 ===== AES Monte Carlo Test - CFB128 mode
+
+[[AES-CFB128-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY, IV, PT) set to some values.
 
@@ -217,6 +258,11 @@ For i = 0 to 99
     PT[0] = CT[j-1]
 ----
 
+[[AES-CFB128-MCT-DEC]]
+====== Decrypt
+
+The pseudocode for decryption can be obtained by replacing all PT's in the encryption pseudocode with CT's and all CT's in the encryption pseudocode with PT's. As well, replace the encrypt operation with the corresponding decrypt operation.
+
 [[AES_KEY_SHUFFLE]]
 ===== AES Monte Carlo Key Shuffle
 
@@ -239,6 +285,8 @@ If ( keylen = 256 )
 [[TDES-ECB-MCT]]
 ===== TDES Monte Carlo Test - ECB mode
 
+[[TDES-ECB-MCT-ENC]]
+====== Encrypt
 The initial condition for the test is the tuple (KEY1, KEY2, KEY3, PT) set to some values.
 
 The algorithm is shown in <<xml_figureMCT_TDES_ECB>>.
@@ -269,8 +317,16 @@ For i = 0 to 399
     PT[0] = CT[j]
 ----
 
+[[TDES-ECB-MCT-DECR]]
+====== Decrypt
+
+The pseudocode for decryption can be obtained by replacing all PT's in the encryption pseudocode with CT's and all CT's in the encryption pseudocode with PT's. As well, replace the encrypt operation with the corresponding decrypt operation.
+
 [[TDES-CBC-MCT]]
 ===== TDES Monte Carlo Test - CBC mode
+
+[[TDES-CBC-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY1, KEY2, KEY3, IV, PT) set to some values.
 
@@ -309,8 +365,26 @@ For i = 0 to 399
     IV[0] = CT[j]
 ----
 
+[[TDES-CBC-MCT-DECR]]
+====== Decrypt
+
+The pseudocode for decryption can be obtained by replacing all PT's in the encryption pseudocode with CT's and all CT's in the encryption pseudocode with PT's. As well, replace the inner loop in the pseudocode with the following:
+
+[[xml_figureMCT_TDES_CBC_DECR]]
+.TDES-CBC Monte Carlo Test Decrypt
+[source, code]
+----
+    For j = 0 to 9999
+        PT[j] = TDES_CBC_DECRYPT(Key1[i], Key2[i], Key3[i], CT[j], IV[j])
+        CT[j+1] = PT[j]
+        IV[j+1] = CT[j]
+----
+
 [[TDES-CBC-I-MCT]]
 ===== TDES Monte Carlo Test - CBC-I mode
+
+[[TDES-CBC-I-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY1, KEY2, KEY3, IV1, IV2, IV3, PT1, PT2, PT3) set to some values.
 
@@ -347,10 +421,10 @@ For i = 0 to 399
         IV2[j+1] = CT2[j]
         IV3[j+1] = CT3[j]
     Output CT1[j], CT2[j], CT3[j]
-    Key1[i+1] = Key1[i] xor CT[j]
-    Key2[i+1] = Key2[i] xor CT[j-1]
+    Key1[i+1] = Key1[i] xor CT1[j]
+    Key2[i+1] = Key2[i] xor CT2[j-1]
     If ( keyingOption = 1 )
-        Key3[i+1] = Key3[i] xor CT[j-2]
+        Key3[i+1] = Key3[i] xor CT3[j-2]
     Else
         Key3[i+1] = Key1[i+1]
     PT1[0] = CT1[j-1]
@@ -361,8 +435,58 @@ For i = 0 to 399
     IV3[0] = CT3[j]
 ----
 
+[[TDES-CBC-I-MCT-DECR]]
+====== Decrypt
+
+The initial condition for the test is the tuple (KEY1, KEY2, KEY3, IV1, IV2, IV3, CT1, CT2, CT3) set to some values.
+
+The algorithm is shown in <<xml_figureMCT_TDES_CBC_I_DECR>>.
+
+[[xml_figureMCT_TDES_CBC_I_DECR]]
+.TDES-CBC-I Monte Carlo Test Decrypt
+[source, code]
+----
+Key1[0] = KEY1
+Key2[0] = KEY2
+Key3[0] = KEY3
+IV1[0] = IV1
+IV2[0] = IV2
+IV3[0] = IV3
+CT1[0] = CT1
+CT2[0] = CT2
+CT3[0] = CT3
+For i = 0 to 399
+    Output Key1[i], Key2[i], Key3[i]
+    Output IV1[0], IV2[0], IV3[0]
+    Output CT1[0], CT2[0], CT3[0]
+    For j = 0 to 9999
+        PT[j] = TDES_CBC_I_DECRYPT(Key1[i], Key2[i], Key3[i], CT1[j], CT2[j], CT3[j], IV1[j], IV2[j], IV3[j])
+        CT1[j+1] = PT1[j]
+        CT2[j+1] = PT2[j]
+        CT3[j+1] = PT3[j]
+        IV1[j+1] = CT1[j]
+        IV2[j+1] = CT2[j]
+        IV3[j+1] = CT3[j]
+    Output PT1[j], PT2[j], PT3[j]
+    Key1[i+1] = Key1[i] xor PT1[j]
+    Key2[i+1] = Key2[i] xor PT2[j-1]
+    If ( keyingOption = 1 )
+        Key3[i+1] = Key3[i] xor PT3[j-2]
+    Else
+        Key3[i+1] = Key1[i+1]
+    CT1[0] = PT1[j]
+    CT2[0] = PT2[j]
+    CT3[0] = PT3[j]
+    IV1[0] = CT1[j]
+    IV2[0] = CT2[j]
+    IV3[0] = CT3[j]
+----
+
 [[TDES-CFB-MCT]]
 ===== TDES Monte Carlo Test - CFB1, CFB8, CFB64 modes
+
+[[TDES-CFB-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY1, KEY2, KEY3, IV, PT) set to some values. PT and CT are k-bit where k is the feedback size, for example CFB1 has a feedback size of 1-bit.
 
@@ -399,8 +523,49 @@ For i = 0 to 399
     IV[0] = RightMost_64-K_Bits(IV[j]) || CT[j]
 ----
 
+[[TDES-CFB-MCT-DEC]]
+====== Decrypt
+
+The initial condition for the test is the tuple (KEY1, KEY2, KEY3, IV, CT) set to some values. PT and CT are k-bit where k is the feedback size, for example CFB1 has a feedback size of 1-bit. O[j] is the O~j~ variable internal to the Triple DES operation described in Table 43 of SP 800-20.
+
+The algorithm is shown in <<xml_figureMCT_TDES_CFB_DEC>>.
+
+[[xml_figureMCT_TDES_CFB_DEC]]
+.TDES-CFB Monte Carlo Test Decrypt
+[source, code]
+----
+Key1[0] = KEY1
+Key2[0] = KEY2
+Key3[0] = KEY3
+IV[0] = IV
+CT[0] = CT
+For i = 0 to 399
+    Output Key1[i]
+    Output Key2[i]
+    Output Key3[i]
+    Output IV[0]
+    Output CT[0]
+    For j = 0 to 9999
+        PT[j] = TDES_CFB_DECRYPT(Key1[i], Key2[i], Key3[i], CT[j], IV[j])
+        CT[j+1] = LeftMost_K_Bits(O[j])
+        IV[j+1] = RightMost_64-K_Bits(IV[j]) || CT[j]
+    Output PT[j]
+    C = LeftMost_192_Bits(PT[j] || PT[j-1] || ... || PT[0])
+    Key1[i+1] = Key1[i] xor bits 129-192 of C
+    Key2[i+1] = Key2[i] xor bits 65-128 of C
+    If ( keyingOption = 1 )
+        Key3[i+1] = Key3[i] xor bits 1-64 of C
+    Else
+        Key3[i+1] = Key1[i+1]
+    CT[0] = LeftMost_K_Bits(O[j])
+    IV[0] = RightMost_64-K_Bits(IV[j]) || CT[j]
+----
+
 [[TDES-CFB-P-MCT]]
 ===== TDES Monte Carlo Test - CFB1-P, CFB8-P, CFB64-P modes
+
+[[TDES-CFB-P-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY1, KEY2, KEY3, IV1, IV2, IV3, PT) set to some values. PT and CT are k-bit where k is the feedback size, for example CFB8-P has a feedback size of 8-bits.
 
@@ -423,7 +588,7 @@ For i = 0 to 399
     Output PT[0]
     For j = 0 to 9999
         CT[j] = TDES_CFB_P_ENCRYPT(Key1[i], Key2[i], Key3[i], PT[j], IV1[j], IV2[j], IV3[j])
-        PT[j+1] = LeftMost_K_Bits(IV1[j])
+        PT[j+1] = LeftMost_K_Bits(IV1[j]) <-- This line may not be correct? Compare to SP 800-20 Table 49
     Output CT[j]
     C = LeftMost_192_Bits(CT[j] || CT[j-1] || ... || CT[0])
     Key1[i+1] = Key1[i] xor bits 129-192 of C
@@ -438,8 +603,50 @@ For i = 0 to 399
     IV3[0] = IV1[0] + "AAAAAAAAAAAAAAAA" mod 2^64
 ----
 
+[[TDES-CFB-P-MCT-DEC]]
+====== Decrypt
+
+The initial condition for the test is the tuple (KEY1, KEY2, KEY3, IV1, IV2, IV3, CT) set to some values. PT and CT are k-bit where k is the feedback size, for example CFB8-P has a feedback size of 8-bits. O[j] is the O~j~ variable internal to the Triple DES operation described in Table 50 of SP 800-20.
+
+The algorithm is shown in <<xml_figureMCT_TDES_CFB-P-DEC>>.
+
+[[xml_figureMCT_TDES_CFB-P-DEC]]
+.TDES-CFB-P Monte Carlo Test Decrypt
+[source, code]
+----
+Key1[0] = KEY1
+Key2[0] = KEY2
+Key3[0] = KEY3
+IV1[0] = IV1
+IV2[0] = IV2
+IV3[0] = IV3
+CT[0] = CT
+For i = 0 to 399
+    Output Key1[i], Key2[i], Key3[i]
+    Output IV1[0]
+    Output CT[0]
+    For j = 0 to 9999
+        PT[j] = TDES_CFB_P_DECRYPT(Key1[i], Key2[i], Key3[i], CT[j], IV1[j], IV2[j], IV3[j])
+        CT[j+1] = LeftMost_K_Bits(O[j])
+    Output PT[j]
+    C = LeftMost_192_Bits(PT[j] || PT[j-1] || ... || PT[0])
+    Key1[i+1] = Key1[i] xor bits 129-192 of C
+    Key2[i+1] = Key2[i] xor bits 65-128 of C
+    If ( keyingOption = 1 )
+        Key3[i+1] = Key3[i] xor bits 1-64 of C
+    Else
+        Key3[i+1] = Key1[i+1]
+    CT[0] = LeftMost_K_Bits(O[j])
+    IV1[0] = RightMost_64-K_Bits(IV[j]) || CT[j]
+    IV2[0] = IV1[0] + "5555555555555555" mod 2^64
+    IV3[0] = IV1[0] + "AAAAAAAAAAAAAAAA" mod 2^64
+----
+
 [[TDES-OFB-MCT]]
 ===== TDES Monte Carlo Test - OFB mode
+
+[[TDES-OFB-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY1, KEY2, KEY3, IV, PT) set to some values.
 
@@ -474,8 +681,16 @@ For i = 0 to 399
     IV[0] = CT[j]
 ----
 
+[[TDES-OFB-MCT-DEC]]
+====== Decrypt
+
+The pseudocode for decryption can be obtained by replacing all PT's in the encryption pseudocode with CT's and all CT's in the encryption pseudocode with PT's. As well, replace the encrypt operation with the corresponding decrypt operation.
+
 [[TDES-OFB-I-MCT]]
 ===== TDES Monte Carlo Test - OFB-I mode
+
+[[TDES-OFB-I-MCT-ENC]]
+====== Encrypt
 
 The initial condition for the test is the tuple (KEY1, KEY2, KEY3, IV1, IV2, IV3, PT) set to some values.
 
@@ -511,6 +726,11 @@ For i = 0 to 399
     IV2[0] = IV1[0] + "5555555555555555" mod 2^64
     IV3[0] = IV1[0] + "AAAAAAAAAAAAAAAA" mod 2^64
 ----
+
+[[TDES-OFB-I-MCT-DEC]]
+====== Decrypt
+
+The pseudocode for decryption can be obtained by replacing all PT's in the encryption pseudocode with CT's and all CT's in the encryption pseudocode with PT's. As well, replace the encrypt operation with the corresponding decrypt operation.
 
 === Test Coverage
 
