Assorted RSA Spec clarifications.

--- a/src/rsa/sections/06-keygen-test-vectors.adoc
+++ b/src/rsa/sections/06-keygen-test-vectors.adoc
@@ -22,7 +22,11 @@ The testGroups element at the top level in the test vector JSON object is an arr
 
 The 'tgId', 'testType' and 'tests' objects *MUST* appear in every test group element communicated from the server to the client as a part of a prompt. Other properties are dependent on which 'testType' (see <<testtypes>>) the group is addressing.
 
-In the case of 'infoGeneratedByServer' being set to false during the registration, the server will send mostly empty test cases. It is the responsibility of the client to generate both the input properties and output properties to comprise the test cases.
+The impact of the 'infoGeneratedByServer' property depends on the other properties identified in the keyGen registration.  For 'randPQs' of B.3.2, B.3.4, B.3.5, and B.3.6 (or the corresponding FIPS186-5 values), 'infoGeneratedByServer' set to true will provide the client with ALL the inputs and expect them to arrive at the same output the server has already arrived at.
+
+In the case of 'infoGeneratedByServer' being set to false during the registration, the client will be provided with SOME of the inputs, like an already agreed upon fixed public exponent.  However, in general the server will send mostly empty test cases.  It is the responsibility of the client to generate both the input properties and output properties comprising the test cases and communicate ALL of those back to the server.  The server will try to reach the same output key.
+
+For B.3.3 (or the corresponding FIPS186-5 value of probable), 'infoGeneratedByServer' set to true enables the KAT test groups if the client supports a random public exponent.  The GDT are always enabled as a bare minimum test for B.3.3 (or probable), independent of the 'infoGeneratedByServer' setting.
 
 [[rsa_keyGen_tvjs]]
 === RSA keyGen Test Case JSON Schema
