--- a/src/rsa/sections/07-siggen-responses.adoc
+++ b/src/rsa/sections/07-siggen-responses.adoc
@@ -11,6 +11,7 @@ The following table describes the JSON elements for the test group responses to 
 | JSON Value | Description | JSON type
 
 | tgId | Numeric identifier for the test group | integer
+| conformance | Signifies all test cases within the group should utilize random message hashing as described in <<SP800-106>> | string
 | n | The generated modulus for the group | hex
 | e | The generated public exponent for the group | hex
 | tests | The individual test cases for the group | array
@@ -23,10 +24,14 @@ The following table describes the JSON elements for the test case responses for 
 | JSON Value | Description | JSON type
 
 | tcId | Numeric identifier for the test case | integer
+| randomValue | The random value to be used as an input into the message randomization function as described in <<SP800-106>> | hex
+| randomValueLen | The random value's bit length | integer
 | signature | The computed signature | hex
 |===
 
-The following is an example of the response for RSA / sigGen / *
+NOTE: The 'randomValue' and 'randomValueLen' properties will only be present in test groups for the SP800-106 conformance.
+
+The following is an example of the response for RSA / sigGen / * .
 
 [source, json]
 ----
@@ -53,6 +58,32 @@ The following is an example of the response for RSA / sigGen / *
         {
           "tcId": 3,
           "signature": "4A45C5E696..."
+        }
+      ]
+    },
+	{
+      "tgId": 2,
+      "conformance": "SP800-106",
+      "n": "A730E346899141F8B550C...",
+      "e": "302D7F30CFCE55",
+      "tests": [
+        {
+          "tcId": 4,
+          "randomValue": "C44BAE0830813A8E8F989217C967E68A74EDADD9B14128EC877685E6CB631E5F",
+          "randomValueLen": 256,
+          "signature": "1612B11D9C..."
+        },
+        {
+          "tcId": 5,
+          "randomValue": "7FBB4BDA3C7C2F67E04583A631000EF783D67ED1BFE7620E9BE897A0270E411C",
+          "randomValueLen": 256,
+          "signature": "37387D5C64..."
+        },
+        {
+          "tcId": 6,
+          "randomValue": "8EF77DED2EB53357BAD523AD16C171221FCF24C0CE15E2FC7F9FBE589A64BEFC",
+          "randomValueLen": 256,
+          "signature": "4114A93A82..."
         }
       ]
     }
