--- a/src/rsa/sections/05-sigver-capabilities.adoc
+++ b/src/rsa/sections/05-sigver-capabilities.adoc
@@ -21,7 +21,7 @@ The following RSA / sigVer / FIPS186-2 capabilities *MAY* be advertised by the A
 | properties | RSA signature verification parameters  - see <<FIPS186-2>>, Section 5 | array | modulo, hashAlg, and saltLen (when sigType is "pss")
 | modulo | supported RSA modulo for signature verification - see <<FIPS186-2>>, Section 5 | integer | any one of the supported modulo sizes {1024, 1536, 2048, 3072, 4096}
 | hashPair | supported hash algorithms and optional salt length for signature verification for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | an array of objects containing a hashAlg and an optional saltLen
-| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA-1", "SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512"}
+| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA-1", "SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256"}
 | saltLen | supported salt lengths for PSS signature verification - see <<FIPS186-4>>, Section 5.5 | integer | See the note below
 |===
 
@@ -43,7 +43,7 @@ The following RSA / sigVer / FIPS186-4 capabilities *MAY* be advertised by the A
 | properties | RSA signature verification parameters  - see <<FIPS186-4>>, Section 5 | array | modulo, hashAlg, and saltLen (when sigType is "pss")
 | modulo | supported RSA modulo for signature verification - see <<FIPS186-4>>, Section 5 | integer | any one of the supported modulo sizes {1024, 2048, 3072, 4096}
 | hashPair | supported hash algorithms and optional salt length for signature verification for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | an array of objects containing a hashAlg and an optional saltLen
-| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA-1", "SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512"}
+| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA-1", "SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256"}
 | saltLen | supported salt lengths for PSS signature verification - see <<FIPS186-4>>, Section 5.5 | integer | See the note below
 |===
 
@@ -139,13 +139,13 @@ The following RSA / sigVer / FIPS186-5 capabilities *MAY* be advertised by the A
 | modulo | supported RSA modulo for signature verification - see <<FIPS186-5>>, Section 5 | integer | any one of the supported modulo sizes {2048, 3072, 4096}
 | maskFunction | the mask function used, only valid for PSS | array | any subset of {"mgf1", "shake-128", "shake-256"}
 | hashPair | supported hash algorithms and optional salt length for signature verification for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | an array of objects containing a hashAlg and an optional saltLen
-| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA-1", "SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512"}
+| hashAlg | supported hash algorithms for this sigType and modulo - see <<SP800-131A>>, Section 9 | array | any non-empty subset of {"SHA-1", "SHA2-224", "SHA2-256", "SHA2-384", "SHA2-512", "SHA2-512/224", "SHA2-512/256"}
 | saltLen | supported salt lengths for PSS signature verification - see <<FIPS186-5>>, Section 5.5 | integer | See the note below
 |===
 
 NOTE: The 'saltLen' property for each hash algorithm *SHALL* only be present of the 'sigType' is "pss". The values allowed in PSS signature generation is between 0 and the length of the corresponding hash function output block (in bytes), the end points included.
 
-See the following abbreviated example for a PSS registration for RSA / sigVer / FIPS186-5
+See the following abbreviated example for a PSS registration for RSA / sigVer / FIPS186-5.
 
 [source, json]
 ----
