--- a/src/rsa/sections/07-sigprim-responses.adoc
+++ b/src/rsa/sections/07-sigprim-responses.adoc
@@ -31,6 +31,7 @@ The following is an example of the response for RSA / Signature Primitive / * .
       "tests": [
         {
           "tcId": 1,
+		  "testPassed": true,
           "signature": "a60b879a8fa382fdf4..."
         },
         {
