update AES CTR prompt example

--- a/src/symmetric/sections/97-examples.adoc
+++ b/src/symmetric/sections/97-examples.adoc
@@ -2035,9 +2035,9 @@ The following shows AES-CTR AFT and counter request vectors.
     "testType": "CTR",
     "tests": [{
       "tcId": 829,
-      "key": "3A9A8485E1B7BA1987F88F8C095257C4",
-      "payloadLen": 12800,
-      "pt": "CE8E4B6F7C68DE5FDE3..."
+      "pt": "CE8E4B6F7C68DE5FDE3...",
+      "iv": "00000000000000000000000000000039",
+      "key": "3A9A8485E1B7BA1987F88F8C095257C4"
     }]
   }]
 }]
