--- a/src/symmetric/sections/05-capabilities.adoc
+++ b/src/symmetric/sections/05-capabilities.adoc
@@ -163,6 +163,7 @@ of capabilities is required. See <<property_grid_ff_capabilities>>
 |===
 
 NOTE: keyingOption 2 *SHALL* only be available for decrypt operations.
+NOTE: AES-CTR implementations must support a payloadLen of 128-bits. For AES-CTR, when values less than 128 are supplied for payloadLen, these lengths refer to the bit sizes supported in the last incomplete block (less than 128 bits) of the cipher or plain text.
 
 [[property_grid_ff_capabilities]]
 .Format Preserving Encryption Capabilities Object
