--- a/src/symmetric/sections/06-test-vectors.adoc
+++ b/src/symmetric/sections/06-test-vectors.adoc
@@ -140,7 +140,7 @@ Each test group *SHALL* contain an array of one or more test cases. Each test ca
 | salt| The salt to use in AES-XPN (required for AES-XPN only)| string (hex)
 | pt| Plaintext to use| string (hex)
 | ct| Ciphertext to use| string (hex)
-| payloadLen| Plaintext or Ciphertext length to use in bits. Only the most significant 'payloadLen' bits will be used.| integer
+| payloadLen| The length of the provided Plaintext or Ciphertext in bits. Only the most significant 'payloadLen' bits will be used.| integer
 | dataUnitLen| Length of the data unit in bits for ACVP-AES-XTS| integer
 | aad| AAD to use for AEAD algorithms| string (hex)
 | tag| Tag to use for AEAD algorithms| string (hex)
