Correct RSA keyGen registration typo
-corrected RSA keyGen registration text to state that the capabilities are advertised w/in the 'capabilities' property vs 'capabilities_exchange' property

--- a/src/rsa/sections/05-keygen-capabilities.adoc
+++ b/src/rsa/sections/05-keygen-capabilities.adoc
@@ -1,7 +1,7 @@
 [[rsa_keyGen_capabilities]]
 === Property Registration RSA keyGen FIPS186-4
 
-The RSA keyGen FIPS186-4 capabilities are advertised as JSON objects within the 'capabilities_exchange' property.
+The RSA keyGen FIPS186-4 capabilities are advertised as JSON objects within the 'capabilities' property.
 
 [[mode_keyGenFullSet]]
 ==== keyGen Registration Table
@@ -98,7 +98,7 @@ An example of this is the following
 
 === Property Registration RSA keyGen FIPS186-5
 
-The RSA / keyGen / FIPS186-5 capabilities are advertised as JSON objects within the 'capabilities_exchange' property.
+The RSA / keyGen / FIPS186-5 capabilities are advertised as JSON objects within the 'capabilities' property.
 
 ==== keyGen Registration Table
 
